DigicielFull/force-app/main/default/objects/Commission_Target__c/fields/ID_SP__c.field-meta.xml
<CustomField>
    <fullName>ID_SP__c</fullName>
    <label>ID_SP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>