DigicielFull/force-app/main/default/objects/Commission_Target__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Digicel PNG, Digicel PNG Data Nets, Digicel PNG NEC, Digicel Nauru, Digicel Fiji, Digicel Vanuatu, Digicel Samoa, Digicel Tonga, Digicel PNG Remington</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commissions / Targets</relationshipLabel>
    <relationshipName>Commissions_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>