DigicielFull/force-app/main/default/objects/Commission_Target__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Digicel_Country__c</field>
            <operation>equals</operation>
            <value>Fiji, PNG, Samoa, Vanuatu, Tonga, Nauru</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>